--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,6 @@
     --foreground-rgb: 0, 0, 0;
     --background-start-rgb: 214, 219, 220;
     --background-end-rgb: 255, 255, 255;
-    --backgroud-miidle-rgb: 240, 45, 101;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,5 +18,9 @@
 
 body {
     color: rgb(var(--foreground-rgb));
-    background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--backgroud-miidle-rgb)) ;
+    background: linear-gradient(
+            to bottom,
+            transparent,
+            rgb(var(--background-end-rgb))
+    ) rgb(var(--background-start-rgb));
 }
